<resources>
    <string name="app_name">AirTickets</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="shorter">Короче</string>
    <string name="hotels">Отели</string>
    <string name="tickets">Авиабилеты</string>
    <string name="enter_profile">Войдите в профиль</string>
    <string name="enter_profile_reason">Чтобы обращаться в поддержку и следить за ценами на нужные билеты</string>
    <string name="whats_shorter">Что посмотреть где поесть и чем заняться по всему миру</string>
    <string name="shorter_about_cities">Короче о городах</string>
    <string name="catch_lowest_price">Поймаем самую низкую цену</string>
    <string name="subscription_definition">Пришлем вам уведомление, когда цена на билет изменится. Подпишитесь во время поиска или создайте подписку сейчас.</string>
    <string name="convenient_hotel_search">Удобный поиск отелей на AirTickets</string>
    <string name="main_title">Поиск дешёвых\nавиабилетов</string>
    <string name="title_music">Музыкально отлететь</string>
    <string name="show_all_places">Показать все места</string>
    <string name="your_first_time">Ваш первый раз</string>
    <string name="moscow">Москва</string>
    <string name="where1">Куда - Турция</string>
    <string name="complicated">Сложный маршрут</string>
    <string name="wherever">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="popular">Популярное направление</string>
    <string name="istambul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="price_subscription">Подписка на цену</string>
    <string name="recommended_1st_location">recommended 1st location</string>
    <string name="flight_label">Flight label</string>
    <string name="show_all">Показать все</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="back_button">back</string>
    <string name="swap_button">swap</string>
    <string name="clear_button">clear</string>
    <string name="return_">обратно</string>
    <string name="date_24">24 фев, сб</string>
    <string name="class_1">1, эконом</string>
    <string name="filters">фильтры</string>
    <string name="filter_">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="search">search</string>
    <string name="music_cover">music cover</string>
    <string name="logo">logo</string>
    <string name="from_hint">Откуда - Москва</string>
    <string name="price">%1$s ₽</string>
    <string name="from1">Откуда - Москва</string>
    <string name="no_transfer">/Без пересадок</string>
    <string name="in_flight_time">%1$sч в пути</string>
    <string name="ticket_info">%1$s%2$s</string>
    <string name="depatrure_format">%1$s – </string>
    <string name="difficult">Сложный маршрут</string>
    <string name="departure_arrival">%1$s – %2$s</string>
    <string name="info_list">%1$s, 1 пассажир</string>
    <string name="enter_destination">Введите город назначения</string>
    <string name="enter_departure">Введите город отправления</string>
</resources>