<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/ic_menu_tickets"
        android:title="@string/tickets" />
    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_menu_hotels"
        android:title="@string/hotels" />
    <item
        android:id="@+id/navigation_shorter"
        android:icon="@drawable/ic_menu_shorter"
        android:title="@string/shorter" />
    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_menu_subs"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profile" />
</menu>