<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tickets">
    <include app:graph="@navigation/tickets_navigation" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.css101.airtickets.presentation.ui.tickets.TicketsFragment"
        android:label="@string/tickets"
        tools:layout="@layout/fragment_tickets">
        <action
            android:id="@+id/action_search_to_search_country"
            app:destination="@id/tickets_navigation" />
        <action
            android:id="@+id/action_search_to_weekends"
            app:destination="@id/navigation_weekends" />
        <action
            android:id="@+id/action_search_to_hot"
            app:destination="@id/navigation_hot" />
        <action
            android:id="@+id/action_search_to_complicated"
            app:destination="@id/navigation_complicated" />
    </fragment>
    <fragment
        android:id="@+id/navigation_complicated"
        android:name="com.css101.airtickets.presentation.ui.complicated.ComplicatedFragment"
        android:label="@string/complicated"
        tools:layout="@layout/fragment_complicated" />
    <fragment
        android:id="@+id/navigation_hot"
        android:name="com.css101.airtickets.presentation.ui.hot.HotFragment"
        android:label="@string/hot_tickets"
        tools:layout="@layout/fragment_hot" />
    <fragment
        android:id="@+id/navigation_weekends"
        android:name="com.css101.airtickets.presentation.ui.weekends.WeekendsFragment"
        android:label="@string/weekends"
        tools:layout="@layout/fragment_weekends" />
    <fragment
        android:id="@+id/navigation_hotels"
        android:name="com.css101.airtickets.presentation.ui.hotels.HotelsFragment"
        android:label="@string/hotels"
        tools:layout="@layout/fragment_hotels" />
    <fragment
        android:id="@+id/navigation_shorter"
        android:name="com.css101.airtickets.presentation.ui.shorter.ShorterFragment"
        android:label="@string/shorter"
        tools:layout="@layout/fragment_shorter" />
    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.css101.airtickets.presentation.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/subscriptions"
        tools:layout="@layout/fragment_subscriptions" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.css101.airtickets.presentation.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>