<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/bg"
    android:scrollbars="none"
    tools:context=".ui.tickets.TicketsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturnCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?attr/bg_element_1"
            android:fontFamily="@font/sf_pro_semibold_italic"
            android:text="@string/return_"
            android:textAllCaps="false"
            android:textColor="?attr/text"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_plus"
            app:iconTint="?attr/text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDateCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?attr/bg_element_1"
            android:fontFamily="@font/sf_pro_medium_italic"
            android:text="@string/date_24"
            android:textAllCaps="false"
            android:textColor="?attr/text"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnPeopleCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/bg_element_1"
            android:fontFamily="@font/sf_pro_medium_italic"
            android:text="@string/class_1"
            android:textAllCaps="false"
            android:textColor="?attr/text"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_person"
            app:iconTint="?attr/text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFiltersCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/bg_element_1"
            android:fontFamily="@font/sf_pro_medium_italic"
            android:text="@string/filters"
            android:textAllCaps="false"
            android:textColor="?attr/text"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_filter"
            app:iconTint="?attr/text"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</HorizontalScrollView>
